--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kerjaya insurans</title>
+    <title>Syahril Sumery | Kerjaya insurans</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,10 +29,13 @@
                     <li><a href="#">Produk</a></li>
                     <li><a href="#">Latihan</a></li>
                     <li><a href="/event">Acara</a></li>
-                    <li><p class="modal-open" data-modal="modal1">Berhubung</p></li>
+                    {{!-- <li><p class="modal-open" data-modal="modal1">Berhubung</p></li> --}}
                 </ul>
             </div>
         </nav>
+        <div id="topButton" class="modal-open" data-modal="modal1">
+            <p>Berhubung</p>
+        </div>
         <div class="menu-icon" onclick="menutoggle()">
             <div class="menu-icon-burger"></div>
         </div>    
@@ -216,7 +219,7 @@
                 <li class="item-a">
                     <div class="box">
                         <div class="slide-img">
-                            <img src="/images/tmj1.jpg" alt="">
+                            <img src="/images/waktu-yang-fleksibel.png" alt="">
                         </div>
                         <div class="detail-box">
                             <div class="type">
@@ -231,7 +234,7 @@
                 <li class="item-b">
                     <div class="box">
                         <div class="slide-img">
-                            <img src="/images/tmj2.jpg" alt="">
+                            <img src="/images/pendapatan-tanpa-had.png" alt="">
                         </div>
                         <div class="detail-box">
                             <div class="type">
@@ -246,7 +249,7 @@
                 <li class="item-c">
                     <div class="box">
                         <div class="slide-img">
-                            <img src="/images/tmj3.jpg" alt="">
+                            <img src="/images/hadiah-prestasi.png" alt="">
                         </div>
                         <div class="detail-box">
                             <div class="type">
@@ -393,7 +396,105 @@
     </section>
 
     <div class="bottom-filler">
-        
+        <div class="testimonial">
+            <div class="mainTitle">
+                <h1>What our clients say about us?</h1>
+            </div> 
+            <div class="position-carousel2">
+                <div class="carousel-container2">
+
+                    <i class="fa fa-arrow-left" id="prevBtn2"></i>
+                    <i class="fa fa-arrow-right" id="nextBtn2"></i>
+
+                    <div class="carousel-slide2">
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" id="lastClone2" alt="">
+                                </div>    
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/fred.jpeg">
+                                    <h3>Faiz Fikri Fared</h3>
+                                    <h4>Executive, Berjaya Waterfront</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" alt="">
+                                </div>
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/saylem.jpeg">
+                                    <h3>Hanif Fuad Salehuddin</h3>
+                                    <h4>Director, Hafusa Design</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" alt="">
+                                </div>
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/wafi.jpeg">
+                                    <h3>Asyraf Abdul Wafi</h3>
+                                    <h4>Manager, Kimia Nilai</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" alt="">
+                                </div>
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/kulop.jpeg">
+                                    <h3>Daniel Fitri Halim</h3>
+                                    <h4>Executive, TMJ Glass Aluminium</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" alt="">
+                                </div>
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/fred.jpeg">
+                                    <h3>Faiz Fikri Fared</h3>
+                                    <h4>Executive, Berjaya Waterfront</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                        <section4>
+                            <div class="hero2">
+                                <div class="carousel-slide2-image">
+                                    <img src="/images/background-empty.png" id="firstClone2" alt="">
+                                </div>
+                                <div class="headline3">
+                                    <i class="fa fa-quote-left"></i>
+                                    <p>We prioritizes on our build quality and Buttergun able to deliver perfectly. As a designer, we really impressed on their capability.</p>
+                                    <img src="images/saylem.jpeg">
+                                    <h3>Hanif Fuad Salehuddin</h3>
+                                    <h4>Director, Hafusa Design</h4>
+                                </div>
+                            </div>    
+                        </section4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     {{!-- <div class="footer">
